# OSAGO_calculator

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  pytest.ini
deploy/: osago.Dockerfile
server/: nginx.conf
src/osago/: manage.py
src/osago/app/: mediator.py  mediator_aggregator.py  uow.py
src/osago/app/abc/: __init__.py  handlers.py  mediator.py  uow.py
src/osago/app/bonus_malus/: __init__.py  get_all_bonus_malus.py  get_suitable_bonus_malus.py
src/osago/app/calculate_osago/: __init__.py  calculate_osago_v1.py
src/osago/app/dto/: __init__.py  coefficients.py  osago.py
src/osago/app/horsepower/: __init__.py  get_all_horsepowers.py  get_suitable_horsepower.py
src/osago/app/insurance_period/: __init__.py  get_all_period_insurance.py  get_suitable_period_insurance.py
src/osago/app/insurance_rate/: __init__.py  get_all_insurance_rates.py  get_suitable_insurance_rate.py
src/osago/app/interfaces/: repository.py  service.py
src/osago/app/periods_use/: __init__.py  get_all_periods_use.py  get_suitable_period_use.py
src/osago/app/restrictions/: __init__.py  get_all_restrictions.py  get_suitable_restrictions.py
src/osago/app/territorial_coefficient/: __init__.py  get_all_territorial_coefficients.py  get_suitable_territorial_coefficient.py
src/osago/app/years_practices/: __init__.py  get_all_years_practices.py  get_suitable_years_practices.py
src/osago/di/: __init__.py  mediator.py  repositories.py  uow.py
src/osago/di/bonus_malus/: __init__.py  queries.py
src/osago/di/horsepower/: __init__.py  queries.py
src/osago/domain/: base_exceptions.py
src/osago/infra/: __init__.py
tests/: conftest.py  test_calculate_osago_v1.py
(+52 files in other folders)
